# ElectronBot_SIM

./: .gitignore  CODEBUDDY.md  LICENSE  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  analyze_freecad.py  analyze_pixels.py  apply_visuals.py  build_fc_mjcf.py  compare_joints.py  create_freecad_aligned.py  create_stable_model.py  debug_mouse_control.py  diagnose_control.py  diagnose_explosion.py  electron-bot-源码与编译指南.md  fix_arm_mass.py  fix_arm_mass_correct.py  fix_joint_axes.py  fix_kp.py  fix_positions.py  generate_split_mjcf.py  mjmodel.xml  overview.md  pyproject.toml  quick_diagnose.py  rebuild_split_mjcf.py  setup_env.sh  shift_mesh_vertices.py  simple_arm_test.py  test_arm_control.py  test_arm_long_sim.py  test_arm_no_viewer.py  test_keyboard_control.py  test_mouse_control_fixed.py  test_viewer_control.py  update_actuator.py  update_grid_colors.py  verify_freecad_aligned.py
.codebuddy/memory/: 2026-07-07.md  2026-07-13.md  2026-07-16.md  MEMORY.md
.codebuddy/rules/: dev-notes-automation.mdc  env-and-commands.mdc
assets/cad/: freecad-joint-control.md  (+3 more)
docs/: architecture.md  dev_guide.md  development_notes.md  hardware_reference.md  固件架构设计.md  固件编译烧录指南.md
scripts/: adjust_body_positions.py  benchmark.py  build_electronbot_xml.py  calc_inertia.py  deploy_openvla.sh  deploy_qwen_vl.sh  diagnose_render.py  diagnose_render_final.py  diagnose_render_v2.py  diagnose_render_v3.py  export_arm_from_freecad.py  export_cad_meshes.py  gen_compare_gif.py  gen_fixed_gif.py  generate_inline_mesh.py  setup-vla-llm.sh  setup_env.sh  split_arm_mesh.py  split_electronbot.py  step_to_mjcf.py  validate_model.py  view_mjcf.py  visual_demo.py
simulation/electronbot_description/: CMakeLists.txt  package.xml
simulation/electronbot_description/launch/: display.launch.py
simulation/electronbot_description/meshes/: base_link.stl  body.stl  box_base.stl  head.stl  left_arm.stl
simulation/electronbot_description/urdf/: electronbot.urdf  electronbot.urdf.xacro  materials.xacro
simulation/electronbot_mujoco/: pyproject.toml
simulation/electronbot_mujoco/electronbot_mujoco/: __init__.py  domain_randomizer.py  env.py  impedance_controller.py  robot.py  sensors.py  servo_sim.py  utils.py
simulation/electronbot_mujoco/electronbot_mujoco/assets/: electronbot.xml  electronbot_inline.xml  scene.xml
simulation/electronbot_mujoco/electronbot_mujoco/tasks/: __init__.py  base_task.py  pointat_task.py  push_task.py  reach_task.py  stack_task.py  wave_task.py
simulation/electronbot_mujoco/scripts/: check_all_joints.py  check_mass.py  convert_step_to_stl.py  debug_control.py  debug_direction.py  debug_motion.py  debug_physics.py  export_cad_meshes.py  generate_inline_mesh.py  test_actuator_force.py  test_env.py  test_motor_control.py  test_no_gravity.py  verify_joint_type.py  visual_demo.py
tests/: __init__.py  test_actions.py  test_benchmark.py  test_env.py  test_mcp_bridge.py  test_sensors.py  test_tasks.py
tools/: download_freecad.sh  install_websocat_tools.sh
web/: mcp-debug-panel.html
(+170 files in other folders)
