[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electronbot_mujoco"
version = "0.1.0"
description = "ElectronBot MuJoCo Simulation Environment"
requires-python = ">=3.8"
dependencies = [
    "mujoco>=3.1.0",
    "gymnasium>=0.29.0",
    "numpy>=1.21",
    "opencv-python>=4.5",
]

[project.optional-dependencies]
dev = [
    "stable-baselines3>=2.3.0",
    "torch>=2.1.0",
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
